// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Section > renders default as expected 1`] = `
<div>
  <div
    class="section w-full max-w-max-width min-w-min-width mx-auto overflow-y-scroll md:px-gutter px-gutter-sm my-8"
  >
    <div
      class="section__title-container flex justify-between items-center gap-4"
    >
      <div
        class="section__content flex-1"
      >
        <h2
          class="section__title mb-4 relative after:w-full"
        >
          This is the title
        </h2>
      </div>
    </div>
    <div
      class="section__body"
    />
  </div>
</div>
`;

exports[`Section > renders with all optional props 1`] = `
<div>
  <div
    class="section w-full max-w-max-width min-w-min-width mx-auto overflow-y-scroll md:px-gutter px-gutter-sm my-8"
  >
    <div
      class="section__title-container flex justify-between items-center gap-4"
    >
      <div
        class="section__content flex-1"
      >
        <h2
          class="section__title mb-4 relative after:w-4/5"
        >
          This is the title
        </h2>
        <p
          class="section__subtitle text-bluedot-darker text-md mb-4"
        >
          This is the subtitle
        </p>
      </div>
      <a
        class="cta-button flex items-center justify-center rounded-radius-sm transition-all duration-200 text-sm px-4 py-3 w-fit font-[650] whitespace-nowrap cta-button--secondary bg-transparent border border-bluedot-normal text-bluedot-normal hover:bg-bluedot-lighter section__cta shrink-0"
        data-testid="cta-link"
        href="/some-path"
      >
        <span
          class="cta-button__text"
        >
          Click me
        </span>
        <span
          class="cta-button__chevron ml-3"
        >
          <img
            alt="→"
            class="cta-button__chevron-icon size-2"
            src="/icons/chevron_blue.svg"
          />
        </span>
      </a>
    </div>
    <div
      class="section__body"
    >
      <p>
        This is the yield
      </p>
    </div>
  </div>
</div>
`;
